salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Carrier_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Billing_City__c</fullName>
    <label>Carrier Billing City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>