salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Carrier_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Billing_Country__c</fullName>
    <label>Carrier Billing Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>