salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Carrier_Billing_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Billing_ZipCode__c</fullName>
    <label>Carrier Billing ZipCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>