salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Carrier_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Contact_Email__c</fullName>
    <label>Carrier Contact Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>