salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Carrier_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Contact_First_Name__c</fullName>
    <label>Carrier Contact First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>