salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Carrier_Contact_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Contact_Legacy_ID__c</fullName>
    <label>Carrier Contact Legacy ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>