salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Carrier_Fax__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Fax__c</fullName>
    <label>Carrier Fax</label>
    <length>30</length>
    <type>Text</type>
</CustomField>