salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Carrier_Mode__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Mode__c</fullName>
    <label>Carrier Mode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>