salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Name__c</fullName>
    <label>Carrier Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>