salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Carrier_Quote_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Quote_Accepted__c</fullName>
    <label>Carrier Quote Accepted</label>
    <length>10</length>
    <type>Text</type>
</CustomField>