salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Carrier_Quote_Accessorial_Charge__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Quote_Accessorial_Charge__c</fullName>
    <label>Carrier Quote Accessorial Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>