salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Carrier_Quote_Legacy_Load_Number__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Quote_Legacy_Load_Number__c</fullName>
    <label>Carrier Quote Legacy Load Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>