salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Carrier_Quote_Legacy_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Quote_Legacy_Quote_Number__c</fullName>
    <label>Carrier Quote Legacy Quote Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>