salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Carrier_Quote_Method__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Quote_Method__c</fullName>
    <label>Carrier Quote Method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>