salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Carrier_Quote_Total__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Quote_Total__c</fullName>
    <label>Carrier Quote Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>