salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Consignee_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Legacy_ID__c</fullName>
    <label>Consignee Legacy ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>