salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Customer_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Customer_Billing_Country__c</fullName>
    <label>Customer Billing Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>