salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Customer_Billing_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>Customer_Billing_ZipCode__c</fullName>
    <label>Customer Billing ZipCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>