salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Customer_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Email__c</fullName>
    <label>Customer Contact Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>