salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Customer_Contact_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Legacy_ID__c</fullName>
    <label>Customer Contact Legacy ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>