salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Customer_Fax__c.field-meta.xml
<CustomField>
    <fullName>Customer_Fax__c</fullName>
    <label>Customer Fax</label>
    <length>30</length>
    <type>Text</type>
</CustomField>