salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone__c</fullName>
    <label>Customer Phone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>