salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Customer_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_Number__c</fullName>
    <label>Customer PO Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>