salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Customer_Quote_Fuel_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Customer_Quote_Fuel_Surcharge__c</fullName>
    <label>Customer Quote Fuel Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>