salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Customer_Quote_Legacy_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Quote_Legacy_Quote_Number__c</fullName>
    <label>Customer Quote Legacy Quote Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>