salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Customer_Quote_Line_Haul__c.field-meta.xml
<CustomField>
    <fullName>Customer_Quote_Line_Haul__c</fullName>
    <label>Customer Quote Line Haul</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>