salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Customer_Quote_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Customer_Quote_Pricing__c</fullName>
    <label>Customer Quote Pricing</label>
    <length>10</length>
    <type>Text</type>
</CustomField>