salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Customer_Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Quote_Status__c</fullName>
    <label>Customer Quote Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>