salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Customer_Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Customer_Shipping_City__c</fullName>
    <label>Customer Shipping City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>