salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Customer_Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Customer_Shipping_State__c</fullName>
    <label>Customer Shipping State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>