salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Customer_Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>Customer_Shipping_Street__c</fullName>
    <label>Customer Shipping Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>