salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Customer_Shipping_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>Customer_Shipping_ZipCode__c</fullName>
    <label>Customer Shipping ZipCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>