salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Delivery_Location_Stop_Number__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location_Stop_Number__c</fullName>
    <label>Delivery Location Stop Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>