salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Line_Item_Handling_Unit_Count__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Handling_Unit_Count__c</fullName>
    <label>Line Item Handling Unit Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>