salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Line_Item_Legacy_Load_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Legacy_Load_Number__c</fullName>
    <label>Line Item Legacy Load Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>