salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Line_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Name__c</fullName>
    <label>Line Item Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>