salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Line_Item_Weight_Units__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Weight_Units__c</fullName>
    <label>Line Item Weight Units</label>
    <length>3</length>
    <type>Text</type>
</CustomField>