salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Load__c.field-meta.xml
<CustomField>
    <fullName>Load__c</fullName>
    <label>Load #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>