salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Load_Number__c.field-meta.xml
<CustomField>
    <fullName>Load_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Load Number</label>
    <referenceTo>rtms__Load__c</referenceTo>
    <relationshipLabel>LoadBuffer2</relationshipLabel>
    <relationshipName>LoadBuffer2</relationshipName>
    <type>Lookup</type>
</CustomField>