salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Location_1_City__c.field-meta.xml
<CustomField>
    <fullName>Location_1_City__c</fullName>
    <label>Location 1 City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>