salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Location_1_Number__c.field-meta.xml
<CustomField>
    <fullName>Location_1_Number__c</fullName>
    <label>Location 1 Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>