salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Location_1_Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>Location_1_Shipping_Street__c</fullName>
    <label>Location 1 Shipping Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>