salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Location_1_Stop_is_Dropoff__c.field-meta.xml
<CustomField>
    <fullName>Location_1_Stop_is_Dropoff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location 1 Stop is Dropoff</label>
    <type>Checkbox</type>
</CustomField>