salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Location_1_Stop_is_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Location_1_Stop_is_Pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location 1 Stop is Pickup</label>
    <type>Checkbox</type>
</CustomField>