salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Location_1_Stop_Number__c.field-meta.xml
<CustomField>
    <fullName>Location_1_Stop_Number__c</fullName>
    <label>Location 1 Stop Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>