salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Location_2_Legacy_Load_Number__c.field-meta.xml
<CustomField>
    <fullName>Location_2_Legacy_Load_Number__c</fullName>
    <label>Location 2 Legacy Load Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>