salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Location_2_Phone__c.field-meta.xml
<CustomField>
    <fullName>Location_2_Phone__c</fullName>
    <label>Location 2 Phone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>