salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Location_2_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>Location_2_ZipCode__c</fullName>
    <label>Location 2 ZipCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>