salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Location_4_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_4_Name__c</fullName>
    <label>Location 4 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>