salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Location_4_Stop_Is_DropOff__c.field-meta.xml
<CustomField>
    <fullName>Location_4_Stop_Is_DropOff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location 4 Stop Is DropOff</label>
    <type>Checkbox</type>
</CustomField>