salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/PRO_Number__c.field-meta.xml
<CustomField>
    <fullName>PRO_Number__c</fullName>
    <label>PRO Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>