salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Shipper_PO__c.field-meta.xml
<CustomField>
    <fullName>Shipper_PO__c</fullName>
    <label>Shipper PO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>