salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/fields/Weight_Units__c.field-meta.xml
<CustomField>
    <fullName>Weight_Units__c</fullName>
    <label>Weight Units</label>
    <length>3</length>
    <type>Text</type>
</CustomField>