salesforce-integration/Salesforce-Components/objects/LoadBuffer2__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Carrier_Legacy_ID__c</columns>
    <columns>Processed__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Load__c</columns>
    <columns>Load_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>